--- a/app/navbar/navbar.css
+++ b/app/navbar/navbar.css
@@ -1,18 +1,27 @@
+.elanco-logo {
+    float:left;
+    width:18%;
+    height: 100%;
+    text-align: center;
+    color: white;
+    line-height:40px;
+}
+
 .link-container{
     width: 100%;
-    height: 10%;
+    height: 7%;
     top: 0;
     left: 0;
-    background-color: whitesmoke;
     position: absolute;
     right: 30%;
-    background-color: gray;
+    background-color: #082c3c;
 }
 
 .redirect {
     float:left;
-    width:25%;
+    width:20%;
     height: 100%;
     text-align: center;
+    color: white;
     line-height:40px;
 }
