--- a/app/navbar/navbar.css
+++ b/app/navbar/navbar.css
@@ -6,6 +6,13 @@
     color: white;
 }
 
+.container{
+    /* background-color: aqua; */
+    /* width: 100%; */
+
+    padding-top: 80px;
+}
+
 .link-container{
     width: 100%;
     height: 6%;
@@ -25,3 +32,4 @@
     line-height:25px;
     text-decoration: none;
 }
+
