--- a/app/login/login.css
+++ b/app/login/login.css
@@ -1,4 +1,27 @@
+.input-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* width: 50%; */
+    /* height: 2.5%; */
+    align-items: center;
+
+}
+
 .login-container{
+    padding-top: 80px;
     text-align: center;
     float: left;
+    width: 50%;
+    height: 900px;
+}
+
+.login-container2{
+    padding-top: 250px;
+    text-align: center;
+    float: right;
+    background-color: #02253E;
+    color: white;
+    width: 50%;
+    height: 900px;
 }
