worked on responsiveness of login and signup pages

--- a/app/login/login.css
+++ b/app/login/login.css
@@ -2,26 +2,36 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    /* width: 50%; */
-    /* height: 2.5%; */
     align-items: center;
 
 }
 
-.login-container{
-    padding-top: 80px;
+.login-container, .login-container2 {
     text-align: center;
+    width:50%;
+    height: 100vh;
+    padding-top: 200px;
+}
+
+.login-container{
     float: left;
-    width: 50%;
-    height: 900px;
 }
 
 .login-container2{
-    padding-top: 250px;
-    text-align: center;
-    float: right;
     background-color: #02253E;
     color: white;
-    width: 50%;
-    height: 900px;
+    float: right;
+}
+
+.login-container2 > h1{
+    padding-top: 100px;
+}
+
+@media screen and (max-width:800px){
+    .login-container, .login-container2 {
+        width: 100%;
+        height: 55vh;
+        float: none;
+        padding-top: 130px;
+    }
 }
