--- a/app/login/login.css
+++ b/app/login/login.css
@@ -32,6 +32,14 @@
         width: 100%;
         height: 55vh;
         float: none;
-        padding-top: 130px;
+        padding-top: 50px;
+    }
+
+    .login-container2{
+        padding-top: 0;
+    }
+
+    #button > Button {
+        min-width: 100px;
     }
 }
