--- a/app/register/register.css
+++ b/app/register/register.css
@@ -31,6 +31,14 @@
         width: 100%;
         height: 55vh;
         float: none;
-        padding-top: 130px;
+        padding-top: 10px;
+    }
+
+    .signup-container2{
+        padding-top: 0;
+    }
+
+    #button > Button {
+        min-width: 100px;
     }
 }
