--- a/app/main/main.css
+++ b/app/main/main.css
@@ -19,8 +19,7 @@ body{
 }
 
 .cards {
-    /* max-width: 1200px; */
-    width:1800px;
+    max-width:1800px;
     margin: 0 auto;
     display: grid;
     gap: 3rem;
