media query for 900px screen size  added

--- a/app/main/main.css
+++ b/app/main/main.css
@@ -25,6 +25,10 @@ body{
     gap: 3rem;
 }
 
+@media (min-width: 900px) {
+    .cards { grid-template-columns: repeat(3, 1fr); }
+  }
+
 @media (min-width: 600px) {
     .cards { grid-template-columns: repeat(3, 1fr); }
   }
