--- a/app/main/main.css
+++ b/app/main/main.css
@@ -23,12 +23,13 @@ body{
     margin: 0 auto;
     display: grid;
     gap: 3rem;
+    grid-template-columns: repeat(1, 1fr);
 }
 
-@media (min-width: 900px) {
-    .cards { grid-template-columns: repeat(3, 1fr); }
+@media (min-width: 800px) {
+    .cards { grid-template-columns: repeat(2, 1fr); }
   }
 
-@media (min-width: 600px) {
+  @media (min-width: 1000px) {
     .cards { grid-template-columns: repeat(3, 1fr); }
-  }
+}
