--- a/app/register/register.css
+++ b/app/register/register.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .input-container{
     display: flex;
     justify-content: center;
@@ -20,6 +25,7 @@
 
 .signup-container2{
     float: right;
+    margin-bottom: 20px;
 }
 
 .signup-container > h1{
