--- a/app/about/about.css
+++ b/app/about/about.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+.whole-page{
+    font-display: optional;
+    font-family: "Open-Sans", sans-serif;
+}
 .info-container{
     padding-top: 5%;
     text-align: left;
@@ -6,7 +10,6 @@
     color: white;
     width: 98%;
     height: 10%;
-    font-family: "Open-Sans", sans-serif;
     border-radius: 25px;
     margin: auto;
     background-color: #1e609d;
@@ -15,7 +18,6 @@
 h1 {
     font-weight: 880;
     font-size: 45px;
-    font-family: "Open-Sans", sans-serif;
     text-align: left;
     padding-left: 2%;
 }
@@ -28,7 +30,6 @@ h1 {
     color: black;
     width: 40%;
     height: 10%;
-    font-family: "Open-Sans", sans-serif;
     border-radius: 25px;
     margin: auto;
     margin-left: 5%;
@@ -46,7 +47,6 @@ h1 {
     color: white;
     max-width: 68%;
     height: 10%;
-    font-family: "Open-Sans", sans-serif;
     border-radius: 25px;
     margin: auto;
     margin-top: 2%;
@@ -58,7 +58,6 @@ h1 {
 h2{
     font-weight: 600;
     font-size: 26px;
-    font-family: "Open-Sans", sans-serif;
     text-align: left;
 }
 
@@ -69,7 +68,6 @@ h2{
     text-align: center;
     color: black;
     height: 10%;
-    font-family: "Open-Sans", sans-serif;
     border-radius: 25px;
     margin: auto;
     margin-right: 5%;
@@ -86,7 +84,6 @@ h2{
     text-align: center;
     color: black;
     height: 10%;
-    font-family: "Open-Sans", sans-serif;
     border-radius: 25px;
     margin-left: 5%;
     margin-top: 1%;
