--- a/app/main/main.css
+++ b/app/main/main.css
@@ -11,14 +11,21 @@ body{
 
 .viewmore{
     float:right;
-    text-decoration: underline;
+    font-size: smaller;
+    font-weight: lighter;
+    color: white;
 }
 .card {
-    background-color: dodgerblue;
+    background-color: #348ED8;
     color: white;
-    padding: 2rem;
+    padding: 3%;
     height: 9rem;
+    border-radius: 25px;
+    border: #02253E;
+    border-style: solid;
+    border-width: 20px;
 }
+
 
 .cards {
     max-width:1800px;
