--- a/app/footer/footer.css
+++ b/app/footer/footer.css
@@ -5,6 +5,10 @@
     justify-content: space-between;
     background-color: #2171b8;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
 }
 
 .content-container {
@@ -28,4 +32,3 @@ p {
 .elanco-logo2{
     width: 100%;
 }
-
