removed the gaps in login and home pages

--- a/app/home.css
+++ b/app/home.css
@@ -1,17 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
 body {
     margin: 0;
     padding: 0;
-    font-family: "Open-Sans", sans-serif;
 }
 
-
-h1{
-    font-size: 250%;
-}
 .info-container, .login-container {
-    margin: 0 auto;
+    margin:0 auto;
     text-align: center;
     background-color: #011D31
 }
@@ -21,13 +14,35 @@ h1{
     margin-top: 20px;
     padding-left: 30px;
     padding-right: 30px;
-    font-size: 150%;
+    font-size: 145%;
     text-align: left;
     background-color: #F6F6F6;
 }
 
+h1{
+    font-size: 250%;
+}
+
 h4 {
     font-size: 90%;
+}
+
+.image-line {
+    margin: 0 auto;
+    padding-top: 10px;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    background-color: #F6F6F6;
+  }
+
+.image-aligner{
+    display:inline-block;
+    margin: 0 50px;
+}
+
+.image-aligner img {
+    max-width: 100%;
 }
 
 .login-container {
@@ -43,24 +58,6 @@ h4 {
     margin: 10px;
     font-size: 100%;
     width: 40%;
-}
-
-.image-line {
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    background-color: #F6F6F6;
-  }
-
-.image-aligner{
-    display:inline-block;
-    margin: 0 50px;
-}
-
-.image-aligner img {
-    max-width: 100%;
-    height: auto;
 }
 
 @media screen and (max-width: 800px){
