--- a/app/navbar/navbar.css
+++ b/app/navbar/navbar.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body{
+    font-family: "Open Sans", sans-serif;
+}
 .container {
     top: 0;
     left: 0;
