Formatted cards, added graph to activity card (doesnt work), fixed some date filtering

--- a/app/main/main.css
+++ b/app/main/main.css
@@ -19,12 +19,20 @@ body{
     background-color: #348ED8;
     color: white;
     padding: 3%;
-    height: 9rem;
     border-radius: 25px;
     border: #02253E;
     border-style: solid;
     border-width: 20px;
+    width: 300px;
+    height: 400px;
+    margin-bottom: 20px;
 }
+
+  
+  .card-content {
+    height: 100%; 
+    overflow: hidden; 
+  }
 
 
 .cards {
