--- a/app/main/main.css
+++ b/app/main/main.css
@@ -54,3 +54,25 @@ body{
   @media (min-width: 1000px) {
     .cards { grid-template-columns: repeat(3, 1fr); }
 }
+
+.bar-chart {
+  width: 100%; 
+}
+
+@media (max-width: 600px) {
+  .bar-chart {
+    width: 90%; 
+  }
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+  .bar-chart {
+    width: 80%; 
+  }
+}
+
+@media (min-width: 901px) {
+  .bar-chart {
+    width: 70%; 
+  }
+}
